# c-app

./: .gitignore  CMakeLists.txt  README.md  app_config.h.in
cmake/: zig-tc-aarch64-macos-none.cmake  zig-tc-common.cmake  zig-tc-x86_64-linux-gnu.cmake  zig-tc-x86_64-linux-musl.cmake  zig-tc-x86_64-macos-none.cmake  zig-tc-x86_64-windows-gnu.cmake
src/: main.c
